# rhel-mcp-server-prototype

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  run-shell-command-app.html  server.ts  vite.config.ts
fastMCP-server/: .gitignore  README.md  pyproject.toml
fastMCP-server/src/fastmcp_server/: main.py
src/: mcp-app.module.css  run-shell-command-app.tsx
